# hudsucker

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: build.yml
benches/: certificate_authorities.rs  decoder.rs  proxy.rs
examples/: log.rs  noop.rs  openssl.rs  upstream_proxy.rs
examples/ca/: hudsucker.pem
src/: body.rs  certificate_authority.rs  decoder.rs  error.rs  lib.rs  main.rs  noop.rs  proxy.rs  rewind.rs  tee.rs
src/certificate_authority/: certificate_authority.rs  mod.rs  openssl_authority.rs  rcgen_authority.rs
src/proxy/: builder.rs  internal.rs  mod.rs
tests/: context_correlation.rs  openssl_ca.rs  rcgen_ca.rs  websocket.rs
tests/common/: mod.rs
